# astu-boap-sem-ii-cw

./: .gitignore  CMakeLists.txt  LICENSE  README  README.MD
.github/workflows/: build.yml
boap-sem-ii-cw/: main.cpp
boap-sem-ii-cw.xcodeproj/: project.pbxproj
boap-sem-ii-cw.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: xcschememanagement.plist
docs/config/: .env.example
docs/config/templates/: base.docx
docs/main/: project.docx.md
docs/main/diagrams/: .$uml-use-case.svg.bkp
docs/main/project.d/: 01.introduction.md  02.technical-project.md  03.work-project.md  04.pmi.md  05.ending.md  06.appendix-i.md  07.appendix-ii.md  08.appendix-iii.md
docs/main/ref/: presentation.md  project.docx.md  project.example.docx.md  task-statement.docx.md
docs/main/ref/.shit/: presentation.pptx  project.docx  project.example.docx  task-statement.docx  Пошаговая_инструкция_открыть_файл_через_исходный.docx
docs/repo/ar/: README.MD
docs/repo/fr/: README.MD
docs/repo/ru/: README  README.MD
scripts/: run.sh
scripts/docs/: generate.sh  merge.py  requirements
scripts/docs/lua-filters/: remove-hr.lua  uppercase.lua
src/: main.cpp
src/cli/: Command.h  CommandRouter.cpp  CommandRouter.h  GenerateCommand.cpp  GenerateCommand.h  TemplateCommand.cpp  TemplateCommand.h
src/cli/commands/data/: DataCommand.cpp  DataCommand.h
src/cli/commands/db/: DbCommand.cpp  DbCommand.h
src/cli/commands/generate/: GenerateCommand.cpp  GenerateCommand.h
src/cli/commands/help/: HelpCommand.cpp  HelpCommand.h
src/core/: About.h  Version.h
src/database/: Database.cpp  Database.h  EmbeddedSql.h
src/models/: Person.h
src/resources/db/: seed_employees.sql  seed_students.sql  seed_teachers.sql
src/resources/templates/: plain.txt  wordfile.docx
src/templates/: TemplateEngine.cpp  TemplateEngine.h  invitation.txt  letter.txt  report.txt
(+4 files in other folders)
